004-egress-traffic/examples/httpbin-egress-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-route
spec:
  hosts:
  - httpbin.org
  exportTo:
  - "."
  gateways:
  - mesh
  - istio-system/httpbin-exit-gateway
  http:
  - match:
    - port: 80
      gateways:
      - mesh
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
  - match:
    - port: 80
      gateways:
      - istio-system/httpbin-exit-gateway
    route:
    - destination:
        host: httpbin.org
